--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:value="@integer/google_play_services_version" />
 
 
-        <activity android:name=".MapActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,8 +35,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".NewInterventionActivity" />
-       <activity android:name=".InterventionsCodisActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".InterventionsCodisActivity"></activity>
+        <activity android:name=".MapActivity"></activity>
         <activity android:name=".UserInterventionsActivity"></activity>
     </application>
 
