add Tableau des moyens TODO: link to other modules get current intervention

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         </activity>
         <activity android:name=".CodisNewInterventionActivity" />
         <activity android:name=".CodisInterventionsActivity"></activity>
+        <activity android:name=".UserTableauMoyenActivity">
+    </activity>
         <activity android:name=".MapActivity"></activity>
         <activity android:name=".UserInterventionsActivity"></activity>
     </application>
