--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile ('io.socket:socket.io-client:0.8.3') {
+        // excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
 }
