--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,10 +36,10 @@
         </activity>
         <activity android:name=".CodisNewInterventionActivity" />
         <activity android:name=".CodisInterventionsActivity"></activity>
-        <activity android:name=".UserTableauMoyenActivity">
-    </activity>
+        <activity android:name=".UserTableauMoyenActivity"></activity>
         <activity android:name=".MapActivity"></activity>
         <activity android:name=".UserInterventionsActivity"></activity>
+        <activity android:name=".UserMainActivity"></activity>
     </application>
 
 </manifest>
