--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,9 +37,14 @@
         <activity android:name=".CodisNewInterventionActivity" />
         <activity android:name=".CodisInterventionsActivity"></activity>
         <activity android:name=".UserTableauMoyenActivity"></activity>
-        <activity android:name=".MapActivity"></activity>
         <activity android:name=".UserInterventionsActivity"></activity>
-        <activity android:name=".UserMainActivity"></activity>
+        <activity android:name=".UserMainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".CodisValidationActivity"></activity>
     </application>
 
