--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,32 +15,31 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/drone"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAQrAYsHeKXzootDRwwLEYloXz3nVJEdm0" />
+            android:value=" AIzaSyAQrAYsHeKXzootDRwwLEYloXz3nVJEdm0" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
 
         <activity android:name=".LoginActivity">
-
-        </activity>
-        <activity android:name=".CodisNewInterventionActivity" />
-        <activity android:name=".CodisInterventionsActivity"></activity>
-        <activity android:name=".UserInterventionsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CodisNewInterventionActivity" />
+        <activity android:name=".CodisInterventionsActivity"></activity>
+        <activity android:name=".UserInterventionsActivity"></activity>
         <activity android:name=".UserMainActivity"></activity>
         <activity android:name=".CodisMainActivity"/>
+        <!--<activity android:name=".CodisValidationActivity"></activity>-->
     </application>
 
 </manifest>
