--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,22 +35,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".CodisNewInterventionActivity" />
-        <activity android:name=".CodisInterventionsActivity"></activity>
-        <activity android:name=".UserInterventionsActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".UserMainActivity" android:configChanges="keyboardHidden|orientation|screenSize" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter></activity>
+        <activity android:name=".UserInterventionsActivity"/>
+        <activity android:name=".UserMainActivity" android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity android:name=".CodisMainActivity"/>
-        <!--<activity android:name=".CodisValidationActivity"></activity>-->
     </application>
 
 </manifest>
